[profile.dev]
opt-level = 2

[workspace]
members = [
    "eight",
    "five",
    "four",
    "one",
    "seven",
    "six",
    "support/advent",
    "support/advent_macro",
    "support/parse",
    "support/parse_macro",
    "three",
    "two",
]
resolver = "2"

[workspace.dependencies]
combine = "4.6.7"
derive_more = { version = "1", features = ["debug", "display"] }
strum = { version = "0.26", features = ["derive"] }

[workspace.dependencies.advent]
path = "support/advent"

[workspace.dependencies.advent_macro]
path = "support/advent_macro"

[workspace.dependencies.parse]
path = "support/parse"

[workspace.dependencies.parse_macro]
path = "support/parse_macro"
