[package]
name = "nineteen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent.workspace = true
combine.workspace = true
derive_more.workspace = true
enum-map = "2.7.3"
parse.workspace = true
strum.workspace = true
